--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
-    <title>Webapp based on API</title>
+    <title>Shows site app</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="./images/movie.png">
+            <img id="imgLogo" src="">
         </div>
         <nav>
             <a href="#">Movies</a>
