Linters html updates

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
             <a href="#" id="refresh">
-                <img id="imgLogo" src="">
+                <img id="imgLogo" src="." alt="movie logo">
             </a>
         </div>
         <nav>
