Add popup on click on comment button

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
         </nav>
     </header>
     <div class="container" id="container"></div>
+    <div id="modalContainer"></div>
     <footer>
         <p>Created by @amrendrakind & @zkr024</p>
     </footer>
