Add popup compoment and testing

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
         </nav>
     </header>
     <div class="container" id="container"></div>
-    <div id="modalContainer"></div>
+    <div class="" id="modalContainer"></div>
+    <div id="overlay"></div>
     <footer>
         <p>Created by @amrendrakind & @zkr024</p>
     </footer>
