--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
 <body>
     <header>
         <div class="logo">
-            <img id="imgLogo" src="">
+            <a href="#" id="refresh">
+                <img id="imgLogo" src="." alt="movie logo">
+            </a>
         </div>
         <nav>
-            <a href="#">Movies</a>
+            <a href="#" class="showCounter">
+                <p>Movies</p>
+                <p id="count"></p>
+            </a>
             <a href="#">Gender</a>
             <a href="#">Year</a>
         </nav>
     </header>
     <div class="container" id="container"></div>
+    <div class="" id="modalContainer"></div>
+    <div id="overlay"></div>
+    <footer>
+        <p>Created by @amrendrakind & @zkr024</p>
+    </footer>
 </body>
 
 </html>
